// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateWalletName should not render if not open 1`] = `<DocumentFragment />`;

exports[`UpdateWalletName should render a modal 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
            >
              <label
                class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
                data-testid="UpdateWalletName__input"
                name="name"
              />
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 iUSBMV"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="Button__StyledButton-mdtvtf-0 ePkfgQ"
                data-testid="UpdateWalletName__submit"
                type="submit"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Save
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
            >
              <label
                class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger-500"
              >
                A Wallet named 'ARK Wallet 2' already exists on this profile
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 iUSBMV"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="Button__StyledButton-mdtvtf-0 kwcZQn"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Save
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 2`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
            >
              <label
                class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger-500"
              >
                A Wallet named 'ark wallet 2' already exists on this profile
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 iUSBMV"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="Button__StyledButton-mdtvtf-0 kwcZQn"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Save
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 3`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
            >
              <label
                class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger-500"
              >
                A Wallet named 'ARK Wallet 2' already exists on this profile
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 iUSBMV"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="Button__StyledButton-mdtvtf-0 kwcZQn"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Save
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 4`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
            >
              <label
                class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger-500"
              >
                A Wallet named 'ARK Wallet 2' already exists on this profile
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 iUSBMV"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="Button__StyledButton-mdtvtf-0 kwcZQn"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Save
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show error message when name consists only of whitespace 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
            >
              <label
                class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger-500"
              >
                'Name' is invalid
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 iUSBMV"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="Button__StyledButton-mdtvtf-0 kwcZQn"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Save
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show error message when name exceeds 42 characters 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
            >
              <label
                class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger-500"
              >
                'Name' should have at most 42 characters
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 iUSBMV"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="Button__StyledButton-mdtvtf-0 kwcZQn"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Save
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
